# vocab-vault

./: Cargo.toml
src/: cli.rs  lib.rs  main.rs
src/dictionary_structures/: dictionary_keys.rs  dictionary_values.rs
src/translators/: mod.rs
src/translators/english_to_latin/: mod.rs
src/translators/latin_to_english/: mod.rs  parser.rs  translator.rs  utils.rs
src/translators/latin_to_english/tricks/: mod.rs  trick_lists.rs  word_mods.rs
src/use_data/: mod.rs
src/use_data/parsers/: attachment_parser.rs  english_dictionary_parser.rs  latin_dictionary_parser.rs  latin_inflection_parser.rs  modifiers_parser.rs  stem_parser.rs
src/utils/: data.rs  mod.rs  type_translator.rs
src/utils/principle_part_generator/: generate_for_verbs.rs  mod.rs
