[package]
name = "vocab-vault"
version = "0.1.2"
edition = "2021"
authors = ["cqb13 <cqb13.dev@gmail.com>"]
license = "MIT"
description = "A CLI for interacting with the Whitaker's Words Dictionary"
readme = "README.md"
homepage = "https://github.com/cqb13/vocab-vault"
repository = "https://github.com/cqb13/vocab-vault"
keywords = ["cli", "dictionary", "latin", "vocabulary"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
rand = "0.9.2"
anyhow = { version = "1.0.98", features = ["std"] }
thiserror = "2.0.12"

[[bin]]
name = "vocab-vault"
path = "src/main.rs"
